--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,46 @@
 # Project exclude paths
+
+syntax: glob
+
+# idea workspace stores local user ui settings - ignore it
+.idea
+.idea/workspace.xml
+.idea/modules.xml
+# idea feature to create shelves
+.idea/shelf
+# idea ui designer
+.idea/uiDesigner.xml
+# imls are commited one time
+*.iml
+*webapp/build
+*node_modules
+.gradle
+build
+gradle-build
+logback-test.xml
+
+analytics-web/**.css
+analytics-web/src/**.css
+analytics-web/src/css/**.css
+
+bin
+.etmp
+out
+.out
+
+.mbuild
+mbuild.user.yml
+mbuild.override.yml
+
+profiles-user.gradle.kts
+
+analytics-web/public/config.json
+*lock*
+*.gz
+*.zip
+
+*-checkpoint.ipynb
+
 /.gradle/
 /build/
 /selva/build/
